<resources>
    <string name="app_name">PoliQuiz</string>
    <string name="start">GO!</string>
    <string name="play">Play</string>
    <string name="logo">Logo</string>
    <string name="punteggio">Il tuo punteggio è di </string>
    <string name="retry">Riprova</string>
    <string name="home">Torna alla Home</string>
    <string name="casa">Home</string>
    <string name="record">Record precedente: </string>
    <string name="regole">Benvenuto al Poliquiz!\n\nAvviando la partita avrai a disposizione
            3 minuti per cercare di fare pi\ù punti possibile indovinando le 10 parole. Premi l\'icona del
            microfono per provare a dire cosa vedi nell\'immagine in una delle 3 lingue proposte.
            Puoi anche saltare all\'immagine successiva, ma non si torna indietro!
            \nControlla di essere collegato a internet prima di giocare!</string>
    <string name="saved_high_score_key">high_score</string>
    <string name="activityGame">com.example.poliquiz.Game</string>
    <string name="MainActivity">com.example.poliquiz.MainActivity</string>
    <string name="activityInfo">com.example.poliquiz.Info</string>
    <string name="time">03:00</string>
    <string name="fine">Fine!</string>
    <string name="finedialog">Fine del Quiz!</string>
    <string name="parole">parole</string>
    <string name="puntodidomanda">\?</string>
    <string name="passpunt">passpunt</string>
    <string name="noInternet">Errore: connessione a Internet non trovata</string>
    <string name="turnofatto">Parola completata</string>



    <string name="permission_required">You need to grant the permission to use the microphone and save your recording</string>

</resources>