<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="16dp">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/finedialog"
        android:textSize="50dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/puntfin"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punteggio"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:id="@+id/riprova"/>
        <Button
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/casa"
            android:textColor="@color/white"
            android:id="@+id/tornahome"/>
    </LinearLayout>


</LinearLayout>