<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_marginTop="80dp"
        android:layout_width="229dp"
        android:layout_height="118dp"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tvRecord"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        />

    <Button
        android:id="@+id/bttStart"
        android:layout_marginTop="50dp"
        android:layout_width="155dp"
        android:layout_height="74dp"
        android:text="@string/start" />



    <Button
        android:id="@+id/bttInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        />

</LinearLayout>